--- a/themes/soho/layouts/index.html
+++ b/themes/soho/layouts/index.html
@@ -1,29 +1,13 @@
 {{ define "main" -}}
-<div class="posts">
-  {{ range .Site.RegularPages -}}
-    {{ if and (or (eq .Type "post") (eq .Type "article")) (or (not (isset .Params "Hidden")) (eq .Params.Hidden false)) -}}
-    <article class="post">
-      <h1 class="post-title">
-        <a href="{{ .Permalink }}">{{ .Title }}</a>
-      </h1>
+  <div class="post">
+    <h1>{{ .Title }}</h1>
 
-      <div class="post-date">
-        <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time> · {{ .ReadingTime }} min read
-      </div>
+    {{ .Content }}
+  </div>
 
-      {{ if .Description }}
-        {{ .Description }}
-      {{ else }}
-        {{ .Summary }}
-      {{ end }}
-
-      {{ if .Truncated }}
-      <div class="read-more-link">
-        <a href="{{ .RelPermalink }}">Read More</a>
-      </div>
-      {{ end }}
-    </article>
-    {{- end }}
+  {{ if (and .Site.DisqusShortname (eq .Params.DisableComments false)) -}}
+    <h2>Comments</h2>
+    {{ template "_internal/disqus.html" . }}
   {{- end }}
-</div>
+
 {{- end }}
